--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1>My Website</h1>
+        <h1 style="color: blue;">My Website</h1>
         Hello World!
         This is a second line
     </body>
